// Copyright 2025 Gravitational, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.relay.v1alpha;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/relay/v1alpha;relayv1alpha";

// rpcs related to the distribution of information about Relay service agents or
// their Relay group from a Relay service agent to clients and other agents in
// the cluster
service DiscoveryService {
  // returns informations on how to connect to various services provided by the
  // Relay, as well as distributing some configuration options to be used when
  // connecting to the Relay group
  rpc Discover(DiscoverRequest) returns (DiscoverResponse);
}

// request message for DiscoveryService.Discover
message DiscoverRequest {}

// response message for DiscoveryService.Discover
message DiscoverResponse {
  string relay_group = 1;
  string tunnel_public_addr = 2;
  int32 target_connection_count = 3;
}
